testdata/invalid/invalid_extractionentry.pi
> GET https://vg.no/
< 200
INVALID_EXTRACTION_ENTRY